--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ input[type="image"] {
 	border: 0;
 }
 
-/* BUTTONS */ 
+/* BUTTONS */
 #cookies div,
 ul.topnav li.left a,
 ul.topnav li.right a,
@@ -121,11 +121,6 @@ ul.topnav li.right a.active,
 	margin: 0 auto;
 }
 
-#header {
-	width: 1200px;
-	height: 120px;
-}
-
 h1 {
 	margin-top: -10px;
 	padding: 0;
@@ -141,15 +136,15 @@ h3 {
 }
 
 #div-head {
-	width: 100%;  
+	width: 100%;
 	text-align: center;
 	margin: 5px auto 0 auto;
 	background-color: #444;
 	color: #fff;
 	float: left;
-	height: 100px;
+	height: 140px;
 	padding: 5px;
-	border-radius: 3px; 
+	border-radius: 3px;
 }
 
 #head-left {
@@ -171,7 +166,29 @@ h3 {
 	margin-right: 5px;
 	float: left
 }
-
+#head-search {
+	max-width: 100%;
+	 background-color: #FFFFFF;
+	  border-radius: 10px 10px 0px 0px;
+	  padding: 10px;
+	  display: table;
+	  margin: 0 auto;
+}
+#head-search input[type=text] {
+	width: 400px;
+}
+#head-serach input[type=text], select {
+    padding: 12px 20px;
+    margin: 5px 5px;
+    border: 2px solid #ffff33;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #f1f1f1;
+    font-size: 1.2em;
+  }
+#head-serach input[type=text]:focus {
+    background-color: #FFFFFF;
+}
 
 
 .head-logo.left img {margin-right: 15px}
@@ -182,36 +199,6 @@ h3 {
 	width: auto;
 }
 
-#sok {
-	position: relative;
-	width: 99%;
-	background-color: #444;
-	background: linear-gradient(#393, #262);
-	border-radius: 3px;
-	margin: 5px .5% 0 .5%;
-	padding: 10px 10%;
-	overflow: hidden;
-}
-#sok input[type="text"] {
-	padding: 8px 0;
-	font-size: 14px;
-	width: 90%;
-	display: inline-block;
-	text-align: center;
-	box-shadow: inset 0 0 3px #444;
-}
-#sok input[type="image"] {
-	position: absolute;
-	right: 5%;
-	top: 9px;
-	cursor: pointer;
-	width: 25px;
-	height:auto;
-}
-
-#sok-antal {
-	padding: 15px;
-}
 
 #main-nav {
 	margin-top: 5px;
@@ -219,7 +206,7 @@ h3 {
 	float: left;
 	width: 1200px;
 	max-height: 59px;
-	border-radius: 3px; 
+	border-radius: 3px;
 	overflow: hidden;
 	position: relative;
 }
@@ -394,7 +381,7 @@ main {
 	background-color: #ddd;
 	/*background: linear-gradient(#ddd, #bbb);*/
 	float: left;
-	
+
 	width: 100%;
 	/*width: 1199px;*/
 	padding: 2px 0 2px 2px;
@@ -709,7 +696,7 @@ footer #tryggehandel img {
 }
 
 @media screen and (max-width: 1000px) {
-	
+
 	.main-item {
 		width: 24%;
 	}
@@ -724,6 +711,23 @@ footer #tryggehandel img {
 	}
 }
 @media screen and (max-width: 760px) {
+	#div-head {
+		width: 100%;
+		padding: 0px;
+		border-radius: 0px;
+	}
+	#head-search {
+	width: 50%;
+	background-color: #FFFFFF;
+  border-radius: 10px 10px 0px 0px;
+	padding: 10px;
+	display: table;
+	margin: 0 auto;
+	}
+	#head-search input[type=text] {
+		width: 90%;
+		margin: 0 auto;
+	}
 	.nomobile {
 		display: none
 	}
@@ -765,6 +769,14 @@ footer #tryggehandel img {
 	}
 }
 @media screen and (max-width: 520px) {
+	#head-search {
+	width: 100%;
+	background-color: #444;
+	border-radius: 0px;
+	padding: 10px;
+	display: table;
+	margin: 0 auto;
+	}
 	#head-left {margin: 0;}
 	.head-logo.right {display: none}
 	.main-item {
@@ -791,6 +803,7 @@ footer #tryggehandel img {
 }
 
 @media screen and (max-width: 360px) {
+
 	#head-left {margin: 0 auto;}
 	.head-logo.left {display: none}
 	.main-item {
