--- a/style.css
+++ b/style.css
@@ -389,23 +389,34 @@ main {
 }
 
 #mySliderContainer {
-	margin: 10px auto;
+	margin: 10px auto 5px auto;
 	background-color: #fff;
 	max-width: 800px;
 	height: 300px;
-	position: relative;
+	position: relative; 
 	overflow: hidden;
 	border-radius: 3px;
 }
+
+#mySliderContainer h2 {
+	/*text-align: center;*/
+	color: rgba(0, 0, 0, .75);
+	margin-top: 5px;
+	z-index: 5;
+	position: absolute;
+	left: 50%;
+	top: 0;
+	width: 100%;
+	margin-left: -165px;
+}
+
 #mySliderMenu {
-	z-index: 2;
-	/* background-color: rgba(0, 0, 0, .25); */
-	height: 36px;
+	 /*background-color: rgba(0, 0, 0, .25);*/ 
 	display:inline;
 	text-align:center;
-	position: absolute;
+/*	position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 0;*/
 	width: 100%;
 }
 
@@ -455,10 +466,10 @@ main {
 	display: inline-block;
 	height:12px;
 	width:12px;
-	margin: 5px 5px 0 5px;
+	margin: 0 5px;
 	background-color: rgba(128, 128, 128, .5);
-	border: 1px solid rgba(128, 128, 128, .5);
-	border-radius: 20px;
+	/*border: 1px solid rgba(128, 128, 128, .5);*/
+	border-radius: 12px;
 }
 .mySliderButton:hover, .mySliderButtonOn {
 	background-color: #fff;
@@ -468,36 +479,39 @@ main {
 	z-index: 3;
 	box-sizing: inherit;
 	text-align: center;
-	color: #888;
+	color: rgba(128, 128, 128, .5);
 	font-weight: bold;
 	cursor:pointer;
 	display: inline-block;
 	position: absolute;
 	top: 50%;
-	margin-top: -20px;
-	width: 40px;
-	height: 40px;
-	font-size: 30px;
+	margin-top: -25px;
+	width: 50px;
+	height: 50px;
+	font-size: 50px;
 }
 
 .mySliderArrowLeft {left: 0px;}
 .mySliderArrowRight {right: 0px;}
 
 .mySliderArrow:hover {
-	color: #bbb;
+	color: #fff;
+	text-shadow: 0 0 2px #000;
 }
 
 #sliderTimerContainer {
 	z-index: 3;
-	width: 25%;
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
 	margin: 0 auto;
 	height: 4px;
-	background-color: rgba(128, 128, 128, .5)
+	background-color: rgba(255, 255, 255, .5)
 }
 #sliderTimer {
 	width:0;
 	height: 4px;
-	background-color: rgba(128, 255, 128, .5)
+	background-color: rgba(0, 0, 0, .5)
 }
 
 .main-item {
