--- a/style.css
+++ b/style.css
@@ -376,14 +376,43 @@ ul.topnav li.vagn2 a:hover, ul.topnav li.vagn2 a.active {
 	box-shadow: 0 0 3px 3px #393;
 }
 
-main {
+
+
+/* Används endast vid sidor som har vänstermeny */
+#nav-main {
+	overflow: hidden;
+	width: 100%;
+}
+
+#left-nav {
+	float: left;
+	width: 150px;
+	
 	margin-top: 5px;
 	background-color: #ddd;
-	/*background: linear-gradient(#ddd, #bbb);*/
-	float: left;
+	padding: 2px 0 2px 2px;
+	border-radius: 3px;
+}
+#left-nav a {
+	width: 100px;
+	text-align: left;
+}
 
+#right-main {
+	margin-top: 5px;
+	background-color: #ddd;
+	padding: 2px 0 2px 2px;
+	border-radius: 3px;
+	
+	margin-left: 155px;
+}
+
+
+main:not(#right-main) {
 	width: 100%;
-	/*width: 1199px;*/
+	float: left;
+	margin-top: 5px;
+	background-color: #ddd;
 	padding: 2px 0 2px 2px;
 	border-radius: 3px;
 }
@@ -396,6 +425,8 @@ main {
 	position: relative; 
 	overflow: hidden;
 	border-radius: 3px;
+	border-left: 10px solid #ddd;
+	border-right: 10px solid #ddd;
 }
 
 #mySliderContainer h2 {
@@ -411,13 +442,8 @@ main {
 }
 
 #mySliderMenu {
-	 /*background-color: rgba(0, 0, 0, .25);*/ 
-	display:inline;
-	text-align:center;
-/*	position: absolute;
-    left: 0;
-    bottom: 0;*/
 	width: 100%;
+	text-align: center;
 }
 
 .mySlides {
@@ -733,6 +759,11 @@ footer #tryggehandel img {
 	.mobile {
 		display: block
 	}
+	#right-main {
+		margin-left: 0px;
+	}
+	
+	
 	ul.topnav li.left, ul.topnav li.right {
 		float: left;
 		width: 49%;
