Flytta kundvagnen till headern i meny.html

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ input[type="image"] {
 #cookies div,
 ul.topnav li.left a,
 ul.topnav li.right a,
+#head-kundvagn,
 #bread-crumbs a,
 .main-item div,
 #produkt-item .buyButton,
@@ -67,6 +68,8 @@ ul.topnav li.left a:hover,
 ul.topnav li.left a.active,
 ul.topnav li.right a:hover,
 ul.topnav li.right a.active,
+#head-kundvagn a:hover,
+#head-kundvagn a.active,
 #bread-crumbs a:hover,
 .main-item div:hover,
 #produkt-item div:hover,
@@ -77,44 +80,6 @@ ul.topnav li.right a.active,
 	color: #fff;
 }
 
-#cookies-con {
-	display: none;
-	z-index: 998;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, .75);
-}
-
-#cookies {
-	border-radius: 5px;
-	z-index: 999;
-	position: fixed;
-	left: 50%;
-	top: 40%;
-	text-align: center;
-	width: 300px;
-	height: 250px;
-	margin-top: -150px;
-	margin-left: -125px;
-	background-color: #000;
-	background-image: url(" images/cookiemonster.png");
-	color: #fff;
-}
-#cookies p {
-	padding: 20px;
-}
-#cookies a {
-	color: #ff0
-}
-#cookies div {
-	width: 100%;
-	cursor: pointer;
-	width: 250px;
-	padding: 5px 0;
-	margin: 0 auto;
-	border-radius: 3px;
-}
 #container {
 	width: 1200px;
 	height: 100%;
@@ -133,6 +98,10 @@ h2 {
 }
 h3 {
 	font-size: 18px;
+}
+
+header {
+	position: relative;
 }
 
 #div-head {
@@ -197,6 +166,51 @@ h3 {
 	float: left;
 	height: 90px;
 	width: auto;
+}
+
+#head-kundvagn {
+	position: absolute;
+	right: 5px;
+	bottom: 5px;
+	border-radius: 3px;
+}
+#head-kundvagn a {
+
+	display: block;
+    color: #333;
+    text-align: center;
+    padding: 15px 18px;
+    text-decoration: none;
+	border-radius: 3px;
+	
+	
+	width: 20px;
+	background-color: #393;
+	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #262);
+	background-size: 35px 35px, 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	box-shadow: inset 0 0 5px #ddd;
+	margin: 0px .5% 0px .5%;
+	clear:both
+}
+#head-kundvagn a:hover, #head-kundvagn a.active {
+	background-color: #262;
+	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
+	background-size: 35px 35px, 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+#kundvagn3 {
+	background-color: #f00;
+	color: #fff;
+	position: absolute;
+	right: -4px;
+	bottom: 35px;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
 }
 
 
@@ -277,6 +291,7 @@ ul.topnav li.sok input[type="image"] {
 	height:20px;
 }
 
+/* Ska tas bort om kundvagn när kundvagnen helt är flyttad till headern */
 
 ul.topnav li.vagn {
 	position: absolute;
