--- a/style.css
+++ b/style.css
@@ -300,11 +300,15 @@ ul.topnav li.vagn a:hover, ul.topnav li.vagn a.active {
 	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
 }
 
-ul.topnav li.vagn2 {
-	margin-right: 5px;
+#vagn2 {
 	float: right;
+	margin-right: 5px;
+	margin-bottom: 1px;
+	float: right;
+	background-color: #262;
+	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
 }
-ul.topnav li.vagn2 a {
+#vagn2 a {
 	width: 20px;
 	background-color: #393;
 	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #262);
@@ -312,12 +316,13 @@ ul.topnav li.vagn2 a {
 	background-position: center;
 	background-repeat: no-repeat;
 	box-shadow: inset 0 0 5px #ddd;
-	clear:both
+
 }
 ul.topnav li.vagn2 a:hover, ul.topnav li.vagn2 a.active {
 	background-color: #262;
 	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
 }
+
 
 #kundvagn1 {
 	background-color: #f00;
@@ -393,7 +398,7 @@ main {
 	background-color: #fff;
 	max-width: 800px;
 	height: 300px;
-	position: relative; 
+	position: relative;
 	overflow: hidden;
 	border-radius: 3px;
 }
@@ -411,7 +416,7 @@ main {
 }
 
 #mySliderMenu {
-	 /*background-color: rgba(0, 0, 0, .25);*/ 
+	 /*background-color: rgba(0, 0, 0, .25);*/
 	display:inline;
 	text-align:center;
 /*	position: absolute;
@@ -776,7 +781,12 @@ footer #tryggehandel img {
 	display: table;
 	margin: 0 auto;
 	}
-	#head-left {margin: 0;}
+	#head-left {
+		text-align: left;
+		margin: 0;
+		display: inline;
+	}
+
 	.head-logo.right {display: none}
 	.main-item {
 		width: 49%;
