--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ header {
 	background-repeat: no-repeat;
 }
 
-#kundvagn3 {
+#kundvagn {
 	background-color: #f00;
 	color: #fff;
 	position: absolute;
@@ -260,7 +260,7 @@ ul.topnav li.menu a {
 	background: linear-gradient(#393, #262);
 	color: #9f9;
 	box-shadow: inset 0 0 5px #ddd;
-	margin:0px 65px 0px .5%;
+	margin:0px .5% 0px .5%;
 	clear:both
 }
 ul.topnav li.menu a:hover, ul.topnav li.menu a.active {
@@ -287,71 +287,6 @@ ul.topnav li.sok input[type="image"] {
 	cursor: pointer;
 	width:20px;
 	height:20px;
-}
-
-/* Ska tas bort om kundvagn när kundvagnen helt är flyttad till headern */
-
-ul.topnav li.vagn {
-	position: absolute;
-	right: .5%;
-	top: 0px;
-	float: right;
-}
-ul.topnav li.vagn a {
-	width: 20px;
-	background-color: #393;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #262);
-	background-size: 35px 35px, 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	box-shadow: inset 0 0 5px #ddd;
-	margin: 0px .5% 0px .5%;
-	clear:both
-}
-ul.topnav li.vagn a:hover, ul.topnav li.vagn a.active {
-	background-color: #262;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
-}
-
-ul.topnav li.vagn2 {
-	margin-right: 5px;
-	float: right;
-}
-ul.topnav li.vagn2 a {
-	width: 20px;
-	background-color: #393;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #262);
-	background-size: 35px 35px, 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	box-shadow: inset 0 0 5px #ddd;
-	clear:both
-}
-ul.topnav li.vagn2 a:hover, ul.topnav li.vagn2 a.active {
-	background-color: #262;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
-}
-
-#kundvagn1 {
-	background-color: #f00;
-	color: #fff;
-	position: absolute;
-	right: -2px;
-	top: -2px;
-	width: 20px;
-	height: 20px;
-	border-radius: 10px;
-}
-
-#kundvagn2 {
-	background-color: #f00;
-	color: #fff;
-	position: absolute;
-	right: 1px;
-	top: 3px;
-	width: 20px;
-	height: 20px;
-	border-radius: 10px;
 }
 
 #bread-crumbs ul {
@@ -813,12 +748,13 @@ footer #tryggehandel img {
 }
 @media screen and (max-width: 520px) {
 	#head-search {
-	width: 100%;
-	background-color: #444;
-	border-radius: 0px;
-	padding: 10px;
-	display: table;
-	margin: 0 auto;
+		width: 85%;
+		background-color: transparent;
+		border-radius: 0px;
+		padding: 10px;
+		display: table;
+		margin: 0 auto;
+		margin-right: 150px;
 	}
 	#head-left {margin: 0;}
 	.head-logo.right {display: none}
