--- a/style.css
+++ b/style.css
@@ -101,7 +101,30 @@ h3 {
 header {
 	position: relative;
 }
+.flex-produkter {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #FFFFFF;
+}
+.child-produkter {
+  background-color: #ffffff;
+  width: 200px;
+  height: 250px;
+  margin: 10px;
+  text-align: center;
+  font-size: 1em;
+  border: 1px solid #f1f1f1;
+}
+.produktbild {
+  height: 200px;
+  margin-bottom: 2px;
+}
+.produktbild img{
+  max-width: 100%;
+  max-height: 100%;
 
+}
 #div-head {
 	width: 100%;
 	text-align: center;
