--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header {
   width: 200px;
   height: 250px;
   margin: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 1em;
   border: 1px solid #f1f1f1;
 }
@@ -738,7 +738,13 @@ footer #tryggehandel img {
 	#right-main {
 		margin-left: 0px;
 	}
-
+	.flex-produkter {
+	  margin-top: 30px;
+	  display:flex;
+	  flex-wrap: wrap;
+		justify-content: center;
+	  background-color: #FFFFFF;
+	}
 
 	ul.topnav li.left, ul.topnav li.right {
 		float: left;
