--- a/style.css
+++ b/style.css
@@ -116,6 +116,9 @@ header {
   font-size: 1em;
   border: 1px solid #f1f1f1;
 }
+main h1 {
+	margin-top: 5px;
+}
 .produktbild {
   height: 200px;
   margin-bottom: 2px;
