--- a/style.css
+++ b/style.css
@@ -116,8 +116,17 @@ header {
   font-size: 1em;
   border: 1px solid #f1f1f1;
 }
+main a {
+	text-decoration: none;
+	color: #000000;
+}
+main a:hover {
+	text-decoration: none;
+	color: #666666;
+}
 main h1 {
 	margin-top: 5px;
+	margin-bottom: 5px;
 }
 .produktbild {
   height: 200px;
@@ -748,7 +757,6 @@ footer #tryggehandel img {
 		justify-content: center;
 	  background-color: #FFFFFF;
 	}
-
 	ul.topnav li.left, ul.topnav li.right {
 		float: left;
 		width: 49%;
