--- a/style.css
+++ b/style.css
@@ -559,12 +559,12 @@ footer {
 	color: #fff;
 	max-width: 1200px;
 	/*height: 180px;*/
-	margin: 5px 0;
+	margin: 8px;
 	padding: 15px;
 	border-radius: 3px;
 }
 footer div {
-	width: 120px;
+	width: 140px;
 	padding-top: 20px;
 }
 footer a {
@@ -576,6 +576,7 @@ footer a:hover {
 }
 footer .title {
 	font-weight: bold;
+	font-size: 1.2em;
 	margin-bottom: 5px;
 }
 footer #betalning .img1, footer #frakt .img1 {
