--- a/style.css
+++ b/style.css
@@ -221,16 +221,17 @@ main h1 {
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
-	box-shadow: inset 0 0 5px #ddd;
+	box-shadow: inset 0 0 5px #bbb;
 	margin: 0px .5% 0px .5%;
 	clear:both
 }
 #head-kundvagn a:hover, #head-kundvagn a.active {
-	background-color: #262;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
+	background-color: #4f4;
+	background-image: url(" images/shopping_cart.png"), linear-gradient(#4c4, #282);
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
+	box-shadow: inset 0 0 5px #bbb, 0 0 10px #888;
 }
 
 #kundvagn {
@@ -393,7 +394,7 @@ ul.topnav li.sok input[type="image"] {
 
 	margin-left: 155px;
 }
-
+ 
 
 main:not(#right-main) {
 	width: 100%;
@@ -635,6 +636,36 @@ footer #tryggehandel img {
 }
 #totalPris {
 	font-size: 30px;
+}
+
+.kundvagn-item {
+	height: 25px;
+}
+
+.kundvagn-item1 {
+	background-color: #fff;
+}
+.kundvagn-item2 {
+	background-color: #ddd;
+}
+
+.kundvagn-item .r1 {
+	width: 25px;
+}
+.kundvagn-item .r2 {
+	width: 25px;
+}
+.kundvagn-item .r3 {
+	width: 25px;
+}
+.kundvagn-item .r4 {
+	width: 25px;
+}
+.kundvagn-item .r5 {
+	width: 25px;
+}
+.kundvagn-item .r6 {
+	width: 25px;
 }
 
 .kundvagn-item {
