--- a/style.css
+++ b/style.css
@@ -844,7 +844,7 @@ display:inline-block;
 	#head-search input[type=text] {
 		width: 70%;
 		margin: 0;
-		padding-left: 40px;
+
 	}
 	.nomobile {
 		display: none
@@ -883,6 +883,7 @@ display:inline-block;
 	.produkt-info-right {
 		max-width: 100%;
 	}
+
 }
 @media screen and (max-width: 520px) {
 	#head-search {
@@ -913,16 +914,13 @@ display:inline-block;
 	.kundvagn-item .r6 {
 		width: 70px;
 	}
-	#head-search input[type=text] {
-		width: 50%;
-		margin: 0;
-		padding-left: 50px;
-	}
+
 }
 
 @media screen and (max-width: 360px) {
 	#head-search {
 		text-align: left;
+		margin: 10px;
 	}
 	#head-left {margin: 0 auto;}
 	.main-item {
