--- a/style.css
+++ b/style.css
@@ -674,7 +674,7 @@ display:inline-block;
 /* KUNDVAGN */
 
 #kundvagn-items {
-	margin: 5px 5px 0 5px;
+	margin: 5px 2.5% 0 2.5%;
 }
 
 #kundvagn-items a {
@@ -728,6 +728,7 @@ display:inline-block;
 	width: 23px;
 	height: 23px;
 }
+
 .kundvagn-item .r2 {
 	float: left;
 }
@@ -754,12 +755,12 @@ display:inline-block;
 }
 
 #kundvagn-info {
-	margin: 10px;
+	margin: 10px 0 10px 2.5%;
 	float: left;
 }
 
 #kundvagn-pris {
-	margin: 10px;
+	margin: 10px 2.5% 10px 0;
 	text-align: right;
 	float: right;
 	height: 65px;
@@ -772,7 +773,7 @@ display:inline-block;
 #bestall {
 	background-color: #ddd;
 	padding: 10px;
-	margin: 5px;
+	margin: 5px 2.5%;
 	border-radius: 3px;
 }
 
