--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ ul.topnav li.right a,
 #produkt-item .buyButton,
 #produkt-item .buyButtonRemove,
 .kundvagn-item3 div {
-	background-color: #666;
-	background: linear-gradient(#666, #333);
+	background-color: #444;
+	/*background: linear-gradient(#666, #333);*/
 	color: #eee;
-	box-shadow: inset 0 0 5px #ddd;
+	/*box-shadow: inset 0 0 5px #ddd;*/
 }
 
 #cookies div:hover,
@@ -73,8 +73,8 @@ ul.topnav li.right a.active,
 #produkt-item div:hover,
 #produkt-item .buyButtonRemove:hover,
 .kundvagn-item3 div:hover {
-	background-color: #393;
-	background: linear-gradient(#393, #262);
+	background-color:#666666;
+	/*background: linear-gradient(#393, #262);*/
 	color: #fff;
 }
 
@@ -217,24 +217,24 @@ main h1 {
 	border-radius: 3px;
 	width: 20px;
 	background-color: #393;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #262);
+	background-image: url(" images/shopping_cart.png");
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
-	box-shadow: inset 0 0 5px #ddd;
+	/*box-shadow: inset 0 0 5px #ddd;*/
 	margin: 0px .5% 0px .5%;
 	clear:both
 }
 #head-kundvagn a:hover, #head-kundvagn a.active {
 	background-color: #262;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#262, #131);
+	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #fff);
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
 #kundvagn {
-	background-color: #f00;
+	background-color: #000;
 	color: #fff;
 	position: absolute;
 	right: 42px;
@@ -246,8 +246,8 @@ main h1 {
 
 
 #main-nav {
-	margin-top: 5px;
-	background-color: #ddd;
+	margin-top:4px;
+	background-color:;
 	float: left;
 	width: 1200px;
 	max-height: 59px;
@@ -262,12 +262,12 @@ ul.topnav {
     padding: 0;
     overflow: hidden;
 }
-ul.topnav li {margin-top: 5px; margin-bottom: 5px;}
+ul.topnav li {margin-top: 6px; margin-bottom: 7px;}
 ul.topnav li a {
     display: block;
     color: #333;
     text-align: center;
-    padding: 15px 18px;
+    padding: 12px 20px;
     text-decoration: none;
 	border-radius: 3px;
 }
@@ -289,16 +289,16 @@ ul.topnav li.menu{
 	float: left;
 }
 ul.topnav li.menu a {
-	background-color: #393;
-	background: linear-gradient(#393, #262);
-	color: #9f9;
-	box-shadow: inset 0 0 5px #ddd;
+	background-color: #fff;
+	background: #444;
+	color: #000;
+	/*box-shadow: inset 0 0 5px #ddd;*/
 	margin:0px .5% 0px .5%;
 	clear:both
 }
 ul.topnav li.menu a:hover, ul.topnav li.menu a.active {
-	background-color: #262;
-	background: linear-gradient(#262, #131);
+	background-color: #666666;
+	/*background: linear-gradient(#000, #131);*/
 	color: #fff;
 }
 
@@ -329,12 +329,12 @@ ul.topnav li.sok input[type="image"] {
 #bread-crumbs li {
 	font-size: 12px;
 	float: left;
-	margin-top: 8px;
+	margin-top: 10px;
 	margin-right: 2px;
 }
 
 #bread-crumbs a {
-	padding:5px 2px 5px 0px;
+	padding:5px 2px 5px 10px;
 	text-decoration: none;
 	border-radius: 3px 15px 15px 3px;
 	color: #666666;
@@ -351,16 +351,18 @@ ul.topnav li.sok input[type="image"] {
 	margin-top: 5px;
 	/*background-color:#444;*/
 	border-radius: 3px;
-	padding: 5px 5px 0 0;
+	padding: 0 3px 0 0;
 }
 #lang-div img {
 	cursor: pointer;
 	margin-left: 5px;
-	box-shadow: 0 0 2px 2px #999;
+	box-shadow: 0 0 1px 1px #999;
 	border-radius: 3px;
 }
 #lang-div img:hover {
-	box-shadow: 0 0 3px 3px #393;
+	/*box-shadow: 0 0 3px 3px #393;*/
+	opacity: 0.5;
+	filter:alpha(opacity=50);
 }
 
 
