--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
-	font-family: 'Acme', sans-serif;
+	font-family: 'Oswald', sans-serif;
+	/*font-family: 'Acme', sans-serif;*/
 	padding: 0;
 	margin: 0
 }
