--- a/style.css
+++ b/style.css
@@ -223,22 +223,13 @@ main h1 {
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
-<<<<<<< HEAD
 	/*box-shadow: inset 0 0 5px #ddd;*/
-=======
-	box-shadow: inset 0 0 5px #bbb;
->>>>>>> 6adb994a39c3faabd167191bbcf67216aba50822
 	margin: 0px .5% 0px .5%;
 	clear:both
 }
 #head-kundvagn a:hover, #head-kundvagn a.active {
-<<<<<<< HEAD
 	background-color: #262;
 	background-image: url(" images/shopping_cart.png"), linear-gradient(#393, #fff);
-=======
-	background-color: #4f4;
-	background-image: url(" images/shopping_cart.png"), linear-gradient(#4c4, #282);
->>>>>>> 6adb994a39c3faabd167191bbcf67216aba50822
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -254,12 +245,12 @@ main h1 {
 	width: 20px;
 	height: 20px;
 	border-radius: 10px;
+	font-size: 0.85em;
 }
-
 
 #main-nav {
 	margin-top:4px;
-	background-color:;
+	background-color: #fff;
 	float: left;
 	width: 1200px;
 	max-height: 59px;
@@ -274,7 +265,10 @@ ul.topnav {
     padding: 0;
     overflow: hidden;
 }
-ul.topnav li {margin-top: 6px; margin-bottom: 7px;}
+ul.topnav li {
+	margin-top: 6px;
+	margin-bottom: 7px;
+}
 ul.topnav li a {
     display: block;
     color: #333;
@@ -286,7 +280,7 @@ ul.topnav li a {
 
 ul.topnav li.left {
 	float: left;
-	margin-left: 5px;
+	margin-right: 5px;
 }
 
 
@@ -395,8 +389,12 @@ ul.topnav li.sok input[type="image"] {
 	border-radius: 3px;
 }
 #left-nav a {
-	width: 100px;
+	width: 95px;
 	text-align: left;
+}
+
+#left-nav li {
+	margin-left: 5px;
 }
 
 #right-main {
