--- a/style.css
+++ b/style.css
@@ -223,7 +223,6 @@ main h1 {
 	background-size: 35px 35px, 100%;
 	background-position: center;
 	background-repeat: no-repeat;
-	/*box-shadow: inset 0 0 5px #ddd;*/
 	margin: 0px .5% 0px .5%;
 	clear:both
 }
@@ -355,7 +354,6 @@ ul.topnav li.sok input[type="image"] {
 #lang-div {
 	float: right;
 	margin-top: 5px;
-	/*background-color:#444;*/
 	border-radius: 3px;
 	padding: 0 3px 0 0;
 }
@@ -364,11 +362,12 @@ ul.topnav li.sok input[type="image"] {
 	margin-left: 5px;
 	box-shadow: 0 0 1px 1px #999;
 	border-radius: 3px;
-}
-#lang-div img:hover {
-	/*box-shadow: 0 0 3px 3px #393;*/
 	opacity: 0.5;
 	filter:alpha(opacity=50);
+}
+#lang-div img:hover {
+	opacity: 1.0;
+	filter:alpha(opacity=100);
 }
 
 
