--- a/style.css
+++ b/style.css
@@ -86,13 +86,18 @@ ul.topnav li.right a.active,
 	margin: 0 auto;
 }
 
+h4 {
+	margin-top: -10px;
+	padding: 0;
+	font-size: 3em;
+	text-align:center;
+}
 h1 {
 	margin-top: -10px;
 	padding: 0;
 	font-size: 3em;
 	text-align:center;
 }
-
 h2 {
 	font-size: 22px;
 }
