--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h2 {
 h3 {
 	font-size: 18px;
 }
-h4 {
+#rubrik {
 	margin-top: -10px;
 	padding: 0;
 	font-size: 3em;
@@ -112,7 +112,7 @@ header {
 }
 
 .flex-produkter {
-	margin-top: 30px;
+	margin: 30px 2px 0 0;
 	display: flex;
 	flex-wrap: wrap;
 	background-color: #fff;
@@ -746,7 +746,7 @@ footer #tryggehandel img {
 }
 
 @media screen and (max-width: 1000px) {
-	
+
 }
 
 @media screen and (max-width: 760px) {
@@ -806,7 +806,7 @@ footer #tryggehandel img {
 		max-width: 100%;
 	}
 	footer { margin:0;}
-	
+
 }
 @media screen and (max-width: 520px) {
 	#head-search {
