--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ ul.topnav li.sok input[type="image"] {
 	float: left;
 	width: 150px;
 
-	margin-top: 5px;
+	margin: 5px 0;
 	background-color: #ddd;
 	padding: 2px 0 2px 2px;
 	border-radius: 3px;
