här vare produkter

--- a/style.css
+++ b/style.css
@@ -589,6 +589,7 @@ footer #tryggehandel img {
 }
 .produktbild_produktsida img {
 	border: 1px solid #666;
+	max-width: 100%;
 }
 .produkt-info-right .pris {
 	font-size: 1.1em;
