--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ ul.topnav li.menu{
 ul.topnav li.menu a {
 	background-color: #fff;
 	background: #444;
-	color: #000;
+	color: #fff;
 	margin:0px .5% 0px .5%;
 	clear:both
 }
